Add images and html content

--- a/style.css
+++ b/style.css
@@ -1,3 +1,37 @@
 * {
   box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
 }
+
+/*-----------------Body-----------------*/
+
+/*body {
+ height: 100vh;
+ width: 100vw;
+}*/
+
+/*----------------Header----------------*/
+
+header {
+
+}
+
+h1 {
+
+}
+
+span {
+
+}
+
+.
+
+/*-----------------Side-----------------*/
+
+
+
+/*-----------------Main-----------------*/
+
+
+
+/*-----------------Media-----------------*/
