Save tasks as objects and to local storage, need to add tasks to an array

--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ li {
   margin: 30px auto 200px;
 }
 
-/*----------------Section----------------*/
+/*----------------Card Area----------------*/
 
 #card-area {
   height: 100vh;
