--- a/style.css
+++ b/style.css
@@ -149,14 +149,14 @@ li {
   color: #FFFFFF;
   font-size: 4em;
   font-weight: 300;
-  padding: 2%;
-  background-color: #1F1F3D;
+  /*padding: 2%;*/
   border: 2px solid #1F1F3D;
   border-bottom-right-radius: 3px;
   border-top-right-radius: 3px;
 }
 #add-task-btn:disabled {
   background-color: lightgrey;
+  border: 1px solid lightgrey;
 }
 
 #clear-btn:disabled {
@@ -203,6 +203,7 @@ li {
   width: 100%;
   padding: 20%;
   border: 3px dashed #C7D3D8;
+  break-inside: avoid;
 }
 
 .hidden {
@@ -216,18 +217,19 @@ li {
 }
 
 #card {
-  height: 100vh;
+  /*height: 100vh;*/
   width: 100%;
   padding: 3px;
   background-color: #FFFFFF;
-  border: 3px solid #C7D3D8;
+  border: 2px solid #C7D3D8;
+  break-inside: avoid;
 }
 
 .card-header {
-  height: 50px;
+  height: 45px;
   width: 100%;
   background-color: #FFFFFF;
-  border-bottom: 3px solid #C7D3D8;
+  border-bottom: 2px solid #C7D3D8;
 }
 
 h2 {
@@ -240,25 +242,32 @@ h2 {
 }
 
 footer {
-  height: 70px;
+  height: 60px;
   width: 100%;
-  border-top: 3px solid #C7D3D8;
+  padding-top: 10px;
+  border-top: 2px solid #C7D3D8;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
 .footer-item {
+  margin: 5px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
+#delete, #urgent {
+  height: 25px;
+  width: 25px;
+}
+
 p {
   color: #3C6577;
-  font-size: 0.9em;
-  margin-top: 5px;
+  font-size: 0.8em;
+  margin: 5px;
 }
 
 
