--- a/style.css
+++ b/style.css
@@ -154,9 +154,7 @@ li {
   height: 100%;
   width: 15%;
   color: #FFFFFF;
-  font-size: 4em;
-  font-weight: 300;
-  /*padding: 2%;*/
+  padding: 1%;
   background-color: #1F1F3D;
   border: 2px solid #1F1F3D;
   border-bottom-right-radius: 3px;
