--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 /*-----------------Body-----------------*/
 
 body {
- height: 100vh;
- width: 100vw;
+  height: 100vh;
+  width: 100vw;
 }
 img {
   height: 25px;
@@ -228,7 +228,7 @@ li {
 
 .prompt-text {
   color: #C7D3D8;
-  font-size: 1.7em;
+  font-size: 1.5em;
   text-align: center;
 }
 
@@ -260,11 +260,14 @@ h2 {
 .check {
   height: 20px;
   width: 20px;
-  margin-right: 10px;
+  margin: 5px 10px 0 0;
 } 
 
 .card-list-item {
-  color: #1F1F3D;
+  color: #1F1F3D; 
+  font-size: 1.4em;
+  line-height: 1.25;
+  margin-bottom: 10px;
 }
 
 footer {
