--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ span {
 /*-----------------Side-----------------*/
 
 aside {
+  height: 100vh;
   width: 34%;
   padding-top: 20px;
   background-color: #587A8A;
